--- a/1.html
+++ b/1.html
@@ -11,9 +11,10 @@
   <li><a href="2.html">퇴사의 변</a></li>
   <li><a href="3.html">퇴사후 나날들</a></li>
 </ul>
-<p>더이상 무의미하게 열정적으로 살지 않기 위해서 회사를 나섰다.<br>
-평범한 직장인 제인그레이가 직접 부딪치며 온몸으로 쟁취한 워크 라이프 밸런스가 완성된 삶,<br>
-살고 싶은 삶을 찾아 혈혈단신 떠난 그녀의 이야기를 지금 공개한다</p>
+<p>작가 제인 그레이는 개발도상국을 돕겠다는 큰 뜻을 품고<br>
+개발원조연구소, 개발원조기관에서 일을 하다가<br>
+단순히 원조로는 지속가능한 발전이 어렵겠다는 깨달음을 얻고<br>
+모든 이들이 win-win 할수 있는 새로운 서비스를 직접 만들고자 하는 작은 사람이다<br></p>
 <p style="margin-top:35px;">
   <h3><a href="https://brunch.co.kr/@jeongjiwon402" target="_blank" title="제인그레이 브런치 바로가기">제인그레이 작가의 브런치 바로가기</a></h3>
   <br>
